--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 
 .hamburguer-button {
+ 
     border-radius: 200px;
     background-color: #203969;
     color: #fff;
@@ -30,3 +31,75 @@
     transform: translateX(0.75rem); 
     cursor: pointer;
 }
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 300px;
+    background-color: #f8f9fa;
+    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    padding: 20px 5px;
+    transform: translateX(-100%);
+    transition: transform 0.2s ease-in-out;
+    z-index: 998;
+  }
+  
+.peer:checked ~ .sidebar {
+transform: translateX(0);
+}
+
+.close-button {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 1rem;
+    width: 40px;
+    height: 40px;
+    padding: 8px;
+    border: none;
+    background-color: transparent;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+  .close-button:active {
+    border: 2px solid #203969;
+    background-color: transparent;
+  }
+
+  .sidebar-content {
+    position: relative;
+    z-index: -1;
+    height: calc(100% - 60px);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    overflow-y: auto;
+    padding: .4rem;
+    scrollbar-width: thin;
+    scrollbar-color: #6a737b #f8f9fa;
+}
+
+details summary {
+    list-style: none;
+  }
+  
+  .custom-summary {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .arrow-icon {
+    transition: transform 0s ease;
+    transform: scaleX(0.5);
+  }
+  
+  details[open] .arrow-icon {
+    transform: rotate(90deg) scaleX(0.5);
+}
+  
