--- a/css/style.css
+++ b/css/style.css
@@ -52,16 +52,15 @@
 
 .close-button {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  margin-bottom: 1rem;
   width: 40px;
   height: 40px;
-  padding: 8px;
   border: none;
   background-color: transparent;
   border-radius: 12px;
   cursor: pointer;
+  margin-left: .5rem;
 }
 
 .close-button:active {
