--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@
   border-radius: 12px;
   cursor: pointer;
   margin-left: .5rem;
+  margin-bottom: 8px;
 }
 
 .close-button:active {
@@ -88,7 +89,6 @@ details summary {
 .custom-summary {
   display: flex;
   align-items: center;
-  gap: 8px;
   font-weight: bold;
   cursor: pointer;
 }
@@ -131,6 +131,14 @@ details[open]>summary.modulo .arrow-icon {
   padding-right: 0;
 }
 
+.py-2 {
+  margin-bottom: 4px;
+}
+
+.gap-2 {
+  padding-left: .5rem;
+}
+
 .topic-index {
   white-space: nowrap;
   overflow: hidden;
@@ -138,27 +146,36 @@ details[open]>summary.modulo .arrow-icon {
   padding: .5rem 0;
 }
 
-.questionario {
+.subtopic {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   padding: .5rem 0;
-  margin-left: 2.25em;
+  margin-left: 2.6em;
+}
+
+.topic-modulo {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .title {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding: 0 .5rem;
+}
+
+.title-main {
   padding: .5rem .5rem;
 }
 
 .modulo {
   margin-left: 2em;
-  padding: .5rem .5rem;
+  padding: .5rem .3rem;
 }
 
 .w-4 {
   width: .8rem;
-  margin-left: 0.5rem;
 }
